feat: Implement real neural network for AI investors
Replaces placeholder neural network weights with actual `NeuralNetwork` instances.
This change involves updating type definitions, constants, and simulation logic to support the new neural network implementation for hyper-complex AI investors and corporate actions.

The `package.json` and `metadata.json` files have been updated to reflect the project's name and a specific timestamp. The `README.md` has been updated with a new link to AI Studio.

The simulation speed has been increased to start at a higher value, and error handling has been added to the simulation loop to prevent crashes on individual errors.

The `types.ts` file has been refactored to use the `NeuralNetwork` class for AI strategies and corporate actions, removing the deprecated `NeuralNetworkWeights` type.

The `constants.tsx` file has been updated to reflect the new `NeuralNetwork` type and adjust corporate event configurations.

The `services/simulationService.ts` has been refactored to integrate the `NeuralNetwork` class, including changes to initial investor cash and AI initialization parameters. The `advanceTime` function now utilizes the neural network for decision-making.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-copy-of-real-neuralnet-stock-market-simulator",
+  "name": "10/22/2025-4:18pm-real-neuralnet-stock-market-simulator",
   "private": true,
   "version": "0.0.0",
   "type": "module",
